fix add spacing

--- a/site/web/app/themes/filmthreat/assets/styles/layouts/_footer.scss
+++ b/site/web/app/themes/filmthreat/assets/styles/layouts/_footer.scss
@@ -40,3 +40,11 @@ ul {
   margin-top: 35px;
   padding-top: 10px;
 }
+
+.content-info {
+  margin-top: 20px;
+}
+
+.aap {
+  margin-bottom: 20px;
+}
