--- a/site/web/app/themes/filmthreat/assets/styles/layouts/_homepage.scss
+++ b/site/web/app/themes/filmthreat/assets/styles/layouts/_homepage.scss
@@ -236,4 +236,5 @@
   text-align: center;
   margin-top: 20px;
   margin-bottom: 20px;
+  max-width: 728px;
 }
